Changelog
=========

1.3 - (unreleased)
------------------

1.2 - (2010-03-26)
------------------

 * Fix bug where first link in ETC (cross-site-menu) was not clickable [thuliper, #3177]
 * Disable cross site menu popups for IE6 [thuliper, #3175]
 * Fixed atct_album_view title when used in figure context as it is used by
   fancybox [voineali #3156]
 * Added table of contents portlet [thuliper, #3076]

1.1 - (2010-03-16)
------------------

 * Tweaks for gallery-fancybox to work better on small resolutions [thuliper]
 * New subfolder_view for listing contents of subfolders [thuliper, #3102]

1.0 - (2010-03-08)
------------------

 * Show cross-site-menu panels on mouseclick instead of hover [thuliper, #3039]
 * Implemented flexible tooltips in order to be able to add variable length tooltips [voineali, #2986]
 * Prepend ecotip link in footer w/ portal_url so that it works w/ template_service [thuliper, #3038]
 * removed frontpage properties from profile, properties are now managed via zmi [demarant]
 * Update atct_album_view macro in order to be used with eea.dataservice fancybox [voineali, #2924]

0.9 - (2010-02-22)
------------------

 * Autoscroll browser down to element classed 'autoscroll-to-here' #3011
 * Separated galleryview/tooltip integration into more descriptive files enabled for CMS [thuliper, #3007]
 * Generalized the tooltip system [thuliper, #3003]

0.8 - (2010-02-15)
------------------

 * New search box image [thuliper #2952]
 * Customized jquery.ui panel style to use our blue color on links. [thuliper]
 * Fixed event pop up to not rely on acquisition to reach the events Rich Topic [thuliper]
 * Fixed name CSS class name clash with Kupu [thuliper]

0.7 - (2010-01-18)
------------------
 * Portal message for version info now uses two different class styles, one for warning and one for just information. [demarant, #2389]
 * Download figure if no thumb on atct_album_view. [ghicaale #2897]