@@ -4,6 +4,8 @@ Changelog
 1.3 - (unreleased)
 ------------------
 
+ * Automatically open accordion section where there's a selected navigation item [thuliper, #3168]
+
 1.2 - (2010-03-26)
 ------------------
 
